# napari-spatial-statistics

./: LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: demo_nhe_image_layer.md  demo_nhe_points_layer.md
docs/notebooks/: Density_maps_points_data.ipynb  Neighborhood_enrichment_test_points.ipynb
src/napari_spatial_statistics/: __init__.py  _detect_maxima.py  _neighborhood.py  _plot_widget.py  _sample_data.py  _show_neighbors.py  _spatial_statistics.py  _utils.py  _widget.py  napari.yaml  nhe_test_widget.ui
src/napari_spatial_statistics/_tests/: test_detect_maxima.py  test_dock_widget.py  test_neighborhood.py  test_sample_data.py  test_spatial_statistics.py  test_utils.py  test_widgets.py
