[metadata]
name = napari-spatial-statistics
version = 0.0.1
author = Johannes Müller
author_email = johannes_richard.mueller@tu-dresden.de
url = https://github.com/jo-mueller/napari-spatial-statistics
license = BSD-3-Clause
description = Analyze architecture of spatially distributed objects
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/jo-mueller/napari-spatial-statistics/issues
    Documentation = https://github.com/jo-mueller/napari-spatial-statistics#README.md
    Source Code = https://github.com/jo-mueller/napari-spatial-statistics
    User Support = https://github.com/jo-mueller/napari-spatial-statistics/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
napari-spatial-statistics = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-spatial-statistics = napari_spatial_statistics:napari.yaml
